    + Added mantaneance mode;
    + Added inactive addresses removal script;
    + Subnet overlapping now checked also inside folders to prevernt duplicates;
    + Subnet overlapping now checked also between sections if VRF defined;
    + Added new settings directive that requires unique subnets accross sections;

    Bugfixes:
    ----------------------------
    + PowerDNS regenerate PTR records now only updates current subnet (before whole zone);
    + Fixed visual bug on 32-bit systems;
    + Normal users with RWA permissions can scan subnets;
    + Changed default timestamp from 0000-00-00 00:00:00 to 1970-01-01 00:00:01 to avoid SQL install errors if strict mode;
    + Fixed https access on non-standard ports;
    + Extended username to 255 chars for LDAP logins;
    + Fixed search export invalid encoding and data may have been lost XLS file error;
    + Fixed invalid character encoding in API responses;
    + PowerDNS records cannot be created on slave zone;
    + Fixed subnet resizing bug if subnet contained slaves;
    + Added separate CSRF cookies for each address/subnet/pstn object;
    + Deleted items are now shown and searchable from changelog;

== 1.20.1

    Translations:
    ----------------------------
    + French translation updated to verson 1.2;
    + German translation updated to verson 1.2;

    Bugfixes:
    ----------------------------
    + Fixed upgrade bug that selected invalid auth method for AD/LDAP users;
    + Fixed LDAP problems after 1.2 upgrade;
    + Fixed PowerDNS Slave with multiple masters delimiter error;
    + Fixed PowerDNS PTR records not being updated automatically;
    + Fixed csrf cookie bug when editing folder;
    + Fixed csrf cookie bug when truncationg subnet;
    + Fixed invalid code for API crypt method;
    + Fixed strange headings font display in Firefox;
    + Fixed invalid proxy settings in config.dist.php;
    + Fixed search same hostnames in db link form address table;